# discoggin

./: .gitignore  README.md  discoggin.py  pyproject.toml  requirements.txt  sample.config
discoggin/: __main__.py  attlist.py  client.py  clifunc.py  games.py  glk.py  markup.py  sessions.py  util.py
discoglib/: __main__.py
